force-app/main/default/objects/Order_Line_Item__c/Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OLI---{0000000000}</displayFormat>
        <label>Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Item</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>