force-app/main/default/objects/Order_Line_Item__c/fields/Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_Price__c</fullName>
    <formula>Value__c  *  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>