force-app/main/default/objects/Order_Line_Item__c/fields/Final_Price_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Final_Price_After_Discount__c</fullName>
    <formula>Value__c  -  Discount_Price__c</formula>
    <label>Final Price After Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>