force-app/main/default/objects/Order_Line_Item__c/fields/Machine_Name__c.field-meta.xml
<CustomField>
    <fullName>Machine_Name__c</fullName>
    <label>Machine Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>