force-app/main/default/objects/Order_Line_Item__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orders</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Order_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>