force-app/main/default/objects/Order_Line_Item__c/fields/Productes__c.field-meta.xml
<CustomField>
    <fullName>Productes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Productes</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipName>Order_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>