force-app/main/default/objects/Order_Line_Item__c/fields/Quotes_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quotes_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotes Line Item</label>
    <referenceTo>Quote_Line_Item__c</referenceTo>
    <relationshipName>Order_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>