force-app/main/default/objects/Order_Line_Item__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <label>Serial No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>